--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,11 @@ bytes = { version = "1", default-features = false }
 nmea = { version = "0.6.0", features = ["GNSS","serde"] }
 serde = "1.0.190"
 serde_json = "1.0.107"
+bno055 = { version = "0.3.3", features = ["serde"] }
+linux-embedded-hal = "0.3.2"
+mint = { version = "0.5.9", features = ["serde"] }
+quaternion-core = "0.4.2"
+cgmath = { version = "0.18.0", features = ["mint", "serde"] }
 
 [dev-dependencies.tokio]
 version = "^1.8"
